; ModuleID = '/home/carl/AnghaBench/git/extr_line-log.c_queue_diffs.c'
source_filename = "/home/carl/AnghaBench/git/extr_line-log.c_queue_diffs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.line_log_data = type { i32 }
%struct.diff_options = type { i32, i64 }
%struct.diff_queue_struct = type { i32 }
%struct.commit = type { i32 }
%struct.object_id = type { i32 }

@diff_queued_diff = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.line_log_data*, %struct.diff_options*, %struct.diff_queue_struct*, %struct.commit*, %struct.commit*)* @queue_diffs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @queue_diffs(%struct.line_log_data* %0, %struct.diff_options* %1, %struct.diff_queue_struct* %2, %struct.commit* %3, %struct.commit* %4) #0 {
  %6 = alloca %struct.line_log_data*, align 8
  %7 = alloca %struct.diff_options*, align 8
  %8 = alloca %struct.diff_queue_struct*, align 8
  %9 = alloca %struct.commit*, align 8
  %10 = alloca %struct.commit*, align 8
  %11 = alloca %struct.object_id*, align 8
  %12 = alloca %struct.object_id*, align 8
  store %struct.line_log_data* %0, %struct.line_log_data** %6, align 8
  store %struct.diff_options* %1, %struct.diff_options** %7, align 8
  store %struct.diff_queue_struct* %2, %struct.diff_queue_struct** %8, align 8
  store %struct.commit* %3, %struct.commit** %9, align 8
  store %struct.commit* %4, %struct.commit** %10, align 8
  %13 = load %struct.commit*, %struct.commit** %9, align 8
  %14 = call i32 @assert(%struct.commit* %13)
  %15 = load %struct.commit*, %struct.commit** %9, align 8
  %16 = call %struct.object_id* @get_commit_tree_oid(%struct.commit* %15)
  store %struct.object_id* %16, %struct.object_id** %11, align 8
  %17 = load %struct.commit*, %struct.commit** %10, align 8
  %18 = icmp ne %struct.commit* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %5
  %20 = load %struct.commit*, %struct.commit** %10, align 8
  %21 = call %struct.object_id* @get_commit_tree_oid(%struct.commit* %20)
  br label %23

22:                                               ; preds = %5
  br label %23

23:                                               ; preds = %22, %19
  %24 = phi %struct.object_id* [ %21, %19 ], [ null, %22 ]
  store %struct.object_id* %24, %struct.object_id** %12, align 8
  %25 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %26 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %43

29:                                               ; preds = %23
  %30 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %31 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %30, i32 0, i32 0
  %32 = load %struct.line_log_data*, %struct.line_log_data** %6, align 8
  %33 = call i32 @same_paths_in_pathspec_and_range(i32* %31, %struct.line_log_data* %32)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %43, label %35

35:                                               ; preds = %29
  %36 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %37 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %36, i32 0, i32 0
  %38 = call i32 @clear_pathspec(i32* %37)
  %39 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %40 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %39, i32 0, i32 0
  %41 = load %struct.line_log_data*, %struct.line_log_data** %6, align 8
  %42 = call i32 @parse_pathspec_from_ranges(i32* %40, %struct.line_log_data* %41)
  br label %43

43:                                               ; preds = %35, %29, %23
  %44 = call i32 @DIFF_QUEUE_CLEAR(i32* @diff_queued_diff)
  %45 = load %struct.object_id*, %struct.object_id** %12, align 8
  %46 = load %struct.object_id*, %struct.object_id** %11, align 8
  %47 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %48 = call i32 @diff_tree_oid(%struct.object_id* %45, %struct.object_id* %46, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), %struct.diff_options* %47)
  %49 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %50 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %49, i32 0, i32 1
  %51 = load i64, i64* %50, align 8
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %71

53:                                               ; preds = %43
  %54 = call i64 (...) @diff_might_be_rename()
  %55 = icmp ne i64 %54, 0
  br i1 %55, label %56, label %71

56:                                               ; preds = %53
  %57 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %58 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %57, i32 0, i32 0
  %59 = call i32 @clear_pathspec(i32* %58)
  %60 = call i32 @DIFF_QUEUE_CLEAR(i32* @diff_queued_diff)
  %61 = load %struct.object_id*, %struct.object_id** %12, align 8
  %62 = load %struct.object_id*, %struct.object_id** %11, align 8
  %63 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %64 = call i32 @diff_tree_oid(%struct.object_id* %61, %struct.object_id* %62, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), %struct.diff_options* %63)
  %65 = load %struct.line_log_data*, %struct.line_log_data** %6, align 8
  %66 = call i32 @filter_diffs_for_paths(%struct.line_log_data* %65, i32 1)
  %67 = load %struct.diff_options*, %struct.diff_options** %7, align 8
  %68 = call i32 @diffcore_std(%struct.diff_options* %67)
  %69 = load %struct.line_log_data*, %struct.line_log_data** %6, align 8
  %70 = call i32 @filter_diffs_for_paths(%struct.line_log_data* %69, i32 0)
  br label %71

71:                                               ; preds = %56, %53, %43
  %72 = load %struct.diff_queue_struct*, %struct.diff_queue_struct** %8, align 8
  %73 = call i32 @move_diff_queue(%struct.diff_queue_struct* %72, i32* @diff_queued_diff)
  ret void
}

declare dso_local i32 @assert(%struct.commit*) #1

declare dso_local %struct.object_id* @get_commit_tree_oid(%struct.commit*) #1

declare dso_local i32 @same_paths_in_pathspec_and_range(i32*, %struct.line_log_data*) #1

declare dso_local i32 @clear_pathspec(i32*) #1

declare dso_local i32 @parse_pathspec_from_ranges(i32*, %struct.line_log_data*) #1

declare dso_local i32 @DIFF_QUEUE_CLEAR(i32*) #1

declare dso_local i32 @diff_tree_oid(%struct.object_id*, %struct.object_id*, i8*, %struct.diff_options*) #1

declare dso_local i64 @diff_might_be_rename(...) #1

declare dso_local i32 @filter_diffs_for_paths(%struct.line_log_data*, i32) #1

declare dso_local i32 @diffcore_std(%struct.diff_options*) #1

declare dso_local i32 @move_diff_queue(%struct.diff_queue_struct*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
